set docker compose to be compatible with arm-based machines

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
             - selenium
     mysql:
         image: 'mysql/mysql-server:8.0'
+        platform: linux/amd64
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
@@ -93,6 +94,7 @@ services:
         networks:
             - sail
     selenium:
+        platform: linux/amd64
         image: selenium/standalone-chrome
         extra_hosts:
             - 'host.docker.internal:host-gateway'
