--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-regular-svg-icons": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/vue-fontawesome": "^3.0.6",
         "@inertiajs/vue3": "^1.0.14",
+        "sweetalert2": "^11.10.5",
         "vue": "^3.4.19"
     }
 }
