--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "@tailwindcss/forms": "^0.5.7",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
+        "axios": "^1.6.7",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
@@ -25,6 +25,8 @@
         "@fortawesome/vue-fontawesome": "^3.0.6",
         "@inertiajs/vue3": "^1.0.14",
         "sweetalert2": "^11.10.5",
-        "vue": "^3.4.19"
+        "vue": "^3.4.19",
+        "vue-axios": "^3.5.2",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
