--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "sweetalert2": "^11.10.5",
         "vue": "^3.4.19",
         "vue-axios": "^3.5.2",
+        "vue-router": "^4.3.0",
         "vue-toastification": "^2.0.0-rc.5"
     }
 }
